[Minor] Trying to fix flaky test